--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -6,31 +6,13 @@ on:
       - "**"
       - "!main"
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ghcr.io/${{ github.repository }}
-
 jobs:
-  BuildAndPush:
+  Build:
     runs-on: ubuntu-latest
 
-    permissions:
-      packages: write
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # ratchet:actions/checkout@v3
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+      - uses: ./.github/actions/docker
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
+          token: ${{ secrets.GITHUB_TOKEN }}
