--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   Build:
     runs-on: ubuntu-latest
-
+    permissions:
+      security-events: write
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # ratchet:actions/checkout@v3
 
