--- a/.github/actions/docker/action.yml
+++ b/.github/actions/docker/action.yml
@@ -29,6 +29,14 @@ runs:
   steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # ratchet:actions/checkout@v3
 
+      - name: Find latest version of packer
+        id: packer
+        uses: oprypin/find-latest-tag@e1e0e606cc7e9ede25140a5a139b3a5a1b717ece # ratchet:oprypin/find-latest-tag@v1
+        with:
+          repository: hashicorp/packer
+          releases-only: true
+          regex: '^v\d+\.\d+\.\d+$'
+
       - name: Find latest version of terraform
         id: terraform
         uses: oprypin/find-latest-tag@e1e0e606cc7e9ede25140a5a139b3a5a1b717ece # ratchet:oprypin/find-latest-tag@v1
@@ -46,8 +54,10 @@ runs:
       - name: Format terraform version correctly
         id: strip-v-from-tag
         run: |
-          TAG=${{ steps.terraform.outputs.tag }}
-          echo "TF_VERSION=${TAG#v}" >> $GITHUB_ENV
+          PACKER_TAG=${{ steps.packer.outputs.tag }}
+          TF_TAG=${{ steps.terraform.outputs.tag }}
+          echo "PACKER_VERSION=${PACKER_TAG#v}" >> $GITHUB_ENV
+          echo "TF_VERSION=${TF_TAG#v}" >> $GITHUB_ENV
         shell: bash
 
       - name: Login to GitHub Container Registry
@@ -61,6 +71,7 @@ runs:
       - name: Build image
         run: |
           docker build -t ${{ inputs.image_name }}:${{ inputs.image_tag }} \
+          --build-arg PACKER_VERSION=${{ env.PACKER_VERSION }} \
           --build-arg TERRAFORM_VERSION=${{ env.TF_VERSION }} \
           --build-arg TF_LINT_VERSION=${{ steps.tflint.outputs.tag }} \
           .
